# my-rust-app

./: Cargo.toml
public/: index.html
src/: error.rs  examples.rs  main.rs
src/web/: mod.rs  router_login.rs
tests/: hello_test.rs  login_test.rs
